# SFR_Calculation

./: CMakeLists.txt
src/: main.cpp  sfr.cpp  sfr.h
